--- a/PECore/CMakeLists.txt
+++ b/PECore/CMakeLists.txt
@@ -4,5 +4,7 @@ add_library(PECore "public/PECore.h" "src/PECore.cpp")
 set_property(TARGET PECore PROPERTY CXX_STANDARD 17)
 target_include_directories(PECore PUBLIC "public")
 target_include_directories(PECore PRIVATE "private")
-# add_dependencies(PixelExplorer PECore)
-# target_link_libraries(PixelExplorer PECore)
+add_dependencies(PECore SDL3::SDL3)
+target_link_libraries(PECore SDL3::SDL3)
+add_dependencies(PECore glm::glm)
+target_link_libraries(PECore glm::glm)
