--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-set(BUILD_PECORE_TESTS true CACHE BOOL "Builds tests for the PECore project")
+set(BUILD_PECORE_TESTS true CACHE BOOL "Builds tests for PECore")
 set(BUILD_SHARED_LIBS false)
 set(SDL_SHARED true)
 set(SDL_STATIC false)
