--- a/PETests/CMakeLists.txt
+++ b/PETests/CMakeLists.txt
@@ -6,3 +6,4 @@ target_include_directories(PETests PRIVATE "private")
 add_dependencies(PETests PECore)
 target_link_libraries(PETests PECore)
 add_test(NAME PETests COMMAND PETests)
+CopyPECoreDependencies(PETests ${PROJECT_BINARY_DIR})
