--- a/PixelExplorer/CMakeLists.txt
+++ b/PixelExplorer/CMakeLists.txt
@@ -1,8 +1,9 @@
 ﻿project("PixelExplorer" VERSION 0.0.0)
 message(STATUS "PixelExplorer: Version ${PROJECT_VERSION}")
-add_executable(PixelExplorer "src/PixelExplorer.cpp" "public/PixelExplorer.h")
+add_executable(PixelExplorer "src/main.cpp")
 set_property(TARGET PixelExplorer PROPERTY CXX_STANDARD 17)
 target_include_directories(PixelExplorer PUBLIC "public")
 target_include_directories(PixelExplorer PRIVATE "private")
 add_dependencies(PixelExplorer PECore)
 target_link_libraries(PixelExplorer PECore)
+CopyPECoreDependencies(PixelExplorer ${PROJECT_BINARY_DIR})
